--- a/src/components/preview-collection/preview-collection.style.scss
+++ b/src/components/preview-collection/preview-collection.style.scss
@@ -5,8 +5,9 @@
   margin-bottom: 30px;
 
   .title {
-    font-size: 28px;
+    font-size: 38px;
     margin-bottom: 25px;
+    text-align: center;
   }
 
   .preview {
