--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 350px;
+  justify-content: center;
   align-items: center;
   margin-bottom: 0;
   margin-left: 10px;
@@ -58,6 +59,7 @@
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   .collection-item {
-    width: 90%;
+    width: 80vw;
+    margin:  0px;
   }
 }
