--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -7,7 +7,7 @@
 
   .logo-container {
     height: 100%;
-    width: 300px;
+    width: 50%;
     padding: 25px;
     font-size: 32px;
     font-weight: bold;
@@ -39,5 +39,21 @@
   .logo {
     float: left;
     margin-right: 10px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .logo-container {
+    width: 100%;
+  }
+  .options {
+    width: 100%;
+    justify-content: end;
+  }
+  .header {
+    
+    display: inline;
+    justify-content: center;
   }
 }
