--- a/src/components/preview-collection/preview-collection.style.scss
+++ b/src/components/preview-collection/preview-collection.style.scss
@@ -15,5 +15,13 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
+
+  
+}
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .collection-preview {
+    width: 90%;
+  }
 }
 
