--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -52,3 +52,13 @@
     }
   }
 }
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .homepage {
+    display: inline;
+  }
+  .menu-item {
+    width: 90%;
+    flex: 1;
+  }
+}
