--- a/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
+++ b/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
@@ -1,6 +1,16 @@
 .sign-in-and-sign-up {
-    width: 90%;
+    width: 80vw;
     display: flex;
     margin: 30px auto;
     justify-content: space-between;
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .sign-in-and-sign-up {
+      margin: 10px;
+      display: inline;
+      justify-content: center;
+    }
+    
+  }
