--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,6 +1,6 @@
 .header {
   height: 70px;
-  width: 100%;
+  width: 90%;
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
@@ -46,14 +46,15 @@
   /* For mobile phones: */
   .logo-container {
     width: 100%;
+    margin: auto;
   }
   .options {
     width: 100%;
-    justify-content: end;
+    margin: auto;
   }
   .header {
     
     display: inline;
-    justify-content: center;
+    text-align: center;
   }
 }
