--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -7,7 +7,7 @@
 
   .logo-container {
     height: 100%;
-    width: 50%;
+    width: 300px;
     padding: 25px;
     font-size: 32px;
     font-weight: bold;
